force-app/main/default/objects/SAP_Inventory__c/SAP_Inventory__c.object-meta.xml
<CustomObject>
    <label>SAP Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>