force-app/main/default/objects/SAP_Inventory__c/fields/SAP_Product__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product__c</fullName>
    <label>SAP Product</label>
    <referenceTo>SAP_Product__c</referenceTo>
    <relationshipLabel>SAP Inventories</relationshipLabel>
    <relationshipName>SAP_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>